--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -9,6 +9,8 @@
   bottom: 0;
   padding-top: 5vh;
   background-color: $offwhite1;
+  height: fit-content;
+  display: inline-block;
 }
 
 .sub-body {
